Fixed letter spacing

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -38,14 +38,14 @@ h5,
 h6 {
     font-family: "tenso",Helvetica, Arial, sans-serif;
     font-weight: 400;
-    letter-spacing: 1px;
+    letter-spacing: .5px;
     color: #000;
 }
 
 h4 {
     font-family: "tenso",Helvetica, Arial, sans-serif;
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: .5px;
 }
 
 hr.star-light,
@@ -180,7 +180,7 @@ header .intro-text .skills {
 }
 
 .navbar .navbar-nav {
-    letter-spacing: 1px;
+    letter-spacing: .5px;
 }
 
 .navbar .navbar-nav li a:focus {
